Servidor Base de Datos/[Compi2]Proyecto1_201213587/src/Analisis/Usql/Analisis.java
/* Analisis.java */
/* Generated By:JavaCC: Do not edit this line. Analisis.java */
package Analisis.Usql;

public class Analisis implements AnalisisConstants {
  public static void main(String args[]) throws ParseException {
    Analisis parser = new Analisis(System.in);
    parser.S();
  }

  final public void S() throws ParseException {
System.out.println("Comienza!!");
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case T_CREAR:
    case T_USAR:
    case T_ALTERAR:
    case T_ELIMINAR:
    case T_INSERTAR:
    case T_ACTUALIZAR:
    case T_BORRAR:
    case T_SELECCIONAR:
    case T_OTORGAR:
    case T_DENEGAR:
    case T_DECLARAR:
    case T_IMPRIMIR:
    case T_BACKUP_USQL:
    case T_BACKUP_COMPLETO:
    case T_RESTAURAR_USQL:
    case T_RESTAURAR_COMPLETO:
    case ID:{
      L_INSTRUCCION();
      break;
      }
    default:
      jj_la1[0] = jj_gen;
      ;
    }
System.out.println("Exito!!");
  }

  final public void L_INSTRUCCION() throws ParseException {
    INSTRUCCION();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case T_CREAR:
    case T_USAR:
    case T_ALTERAR:
    case T_ELIMINAR:
    case T_INSERTAR:
    case T_ACTUALIZAR:
    case T_BORRAR:
    case T_SELECCIONAR:
    case T_OTORGAR:
    case T_DENEGAR:
    case T_DECLARAR:
    case T_IMPRIMIR:
    case T_BACKUP_USQL:
    case T_BACKUP_COMPLETO:
    case T_RESTAURAR_USQL:
    case T_RESTAURAR_COMPLETO:
    case ID:{
      L_INSTRUCCION();
      break;
      }
    default:
      jj_la1[1] = jj_gen;
      ;
    }
  }

  final public void INSTRUCCION() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case T_CREAR:
    case T_USAR:
    case T_ALTERAR:
    case T_ELIMINAR:
    case T_BACKUP_USQL:
    case T_BACKUP_COMPLETO:
    case T_RESTAURAR_USQL:
    case T_RESTAURAR_COMPLETO:{
System.out.println("etntro llamada ddl");
      DDL();
      break;
      }
    case T_INSERTAR:
    case T_ACTUALIZAR:
    case T_BORRAR:
    case T_SELECCIONAR:{
System.out.println("etntro llamada d,ml");
      DML();
      break;
      }
    case T_OTORGAR:
    case T_DENEGAR:{
System.out.println("etntro llamada dcl");
      DCL();
      break;
      }
    case T_DECLARAR:{
System.out.println("etntro llamada decla");
      DECLARACION();
      break;
      }
    case ID:{
System.out.println("etntro llamada metodo");
      LLAMADA_METODO();
      break;
      }
    case T_IMPRIMIR:{
System.out.println("etntro llamada imprimr");
      jj_consume_token(T_IMPRIMIR);
      jj_consume_token(PAR_IZQ);
      LOGICA_OR();
      jj_consume_token(PAR_DER);
      jj_consume_token(PCOMA);
      break;
      }
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void DDL() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case T_USAR:{
      jj_consume_token(T_USAR);
      jj_consume_token(ID);
      jj_consume_token(PCOMA);
      break;
      }
    case T_CREAR:{
      CREATE();
      break;
      }
    case T_ALTERAR:{
      ALTER();
      break;
      }
    case T_ELIMINAR:{
      ELIMINAR();
      break;
      }
    case T_BACKUP_USQL:
    case T_BACKUP_COMPLETO:{
      BACKUP();
      break;
      }
    case T_RESTAURAR_USQL:
    case T_RESTAURAR_COMPLETO:{
      RESTAURAR();
      break;
      }
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void DML() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case T_INSERTAR:{
      INSERTAR();
      break;
      }
    case T_ACTUALIZAR:{
      ACTUALIZAR();
      break;
      }
    case T_BORRAR:{
      BORRAR();
      break;
      }
    case T_SELECCIONAR:{
      SELECCIONAR();
      jj_consume_token(PCOMA);
      break;
      }
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void DCL() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case T_OTORGAR:{
      jj_consume_token(T_OTORGAR);
      L_ID();
      jj_consume_token(ID);
      jj_consume_token(PUNTO);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case POR:{
        jj_consume_token(POR);
        break;
        }
      case ID:{
        jj_consume_token(ID);
        break;
        }
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(PCOMA);
      break;
      }
    case T_DENEGAR:{
      jj_consume_token(T_DENEGAR);
      L_ID();
      jj_consume_token(ID);
      jj_consume_token(PUNTO);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case POR:{
        jj_consume_token(POR);
        break;
        }
      case ID:{
        jj_consume_token(ID);
        break;
        }
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(PCOMA);
      break;
      }
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void SSL() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case T_DECLARAR:{
      DECLARACION();
      break;
      }
    case ARROBA:{
      ASIGNACION();
      break;
      }
    case T_SI:{
      SI();
      break;
      }
    case T_SELECCIONA:{
      SELECCIONA();
      break;
      }
    case T_PARA:{
      PARA();
      break;
      }
    case T_MIENTRAS:{
      MIENTRAS();
      break;
      }
    case T_DETENER:{
      jj_consume_token(T_DETENER);
      jj_consume_token(PCOMA);
      break;
      }
    case T_IMPRIMIR:{
      jj_consume_token(T_IMPRIMIR);
      jj_consume_token(PAR_IZQ);
      LOGICA_OR();
      jj_consume_token(PAR_DER);
      jj_consume_token(PCOMA);
      break;
      }
    case T_RETORNO:{
      RETORNO();
      jj_consume_token(PCOMA);
      break;
      }
    case ID:{
      LLAMADA_METODO();
      break;
      }
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void LLAMADA_METODO() throws ParseException {
    jj_consume_token(ID);
    jj_consume_token(PAR_IZQ);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case NOT:
    case T_FECHA:
    case T_FECHA_HORA:
    case T_CONTAR:
    case CADENA:
    case ENTERO:
    case DECIMAL:
    case ID:
    case ARROBA:{
      L_EXPRESIONES();
      break;
      }
    default:
      jj_la1[9] = jj_gen;
      ;
    }
    jj_consume_token(PAR_DER);
    jj_consume_token(PCOMA);
  }

  final public void CREATE() throws ParseException {
    jj_consume_token(T_CREAR);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case T_BASE_DATOS:
    case T_TABLA:
    case T_OBJETO:
    case T_USUARIO:{
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case T_BASE_DATOS:{
        CREATE_BASE();
        break;
        }
      case T_TABLA:{
        CREATE_TABLA();
        break;
        }
      case T_OBJETO:{
        CREATE_OBJETO();
        break;
        }
      case T_USUARIO:{
        CREATE_USUARIO();
        break;
        }
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(PCOMA);
      break;
      }
    case T_PROCEDIMIENTO:{
      CREATE_PROCEDIMIENTO();
      break;
      }
    case T_FUNCION:{
      CREATE_FUNCION();
      break;
      }
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void CREATE_BASE() throws ParseException {
    jj_consume_token(T_BASE_DATOS);
    jj_consume_token(ID);
  }

  final public void CREATE_TABLA() throws ParseException {
    jj_consume_token(T_TABLA);
    jj_consume_token(ID);
    jj_consume_token(PAR_IZQ);
    L_CAMPO();
    jj_consume_token(PAR_DER);
  }

  final public void L_CAMPO() throws ParseException {
    CAMPO();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case COMA:{
      jj_consume_token(COMA);
      L_CAMPO();
      break;
      }
    default:
      jj_la1[12] = jj_gen;
      ;
    }
  }

  final public void CAMPO() throws ParseException {
    TIPO_DATO();
    jj_consume_token(ID);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case T_NULO:
    case T_NO_NULO:
    case T_AUTOINCREMETABLE:
    case T_LLAVE_PRIMARIA:
    case T_LLAVE_FORANEA:{
      L_COMPLEMENTO();
      break;
      }
    default:
      jj_la1[13] = jj_gen;
      ;
    }
  }

  final public void TIPO_DATO() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case T_TEXT:{
      jj_consume_token(T_TEXT);
      break;
      }
    case T_INTEGER:{
      jj_consume_token(T_INTEGER);
      break;
      }
    case T_DOUBLE:{
      jj_consume_token(T_DOUBLE);
      break;
      }
    case T_BOOL:{
      jj_consume_token(T_BOOL);
      break;
      }
    case T_DATE:{
      jj_consume_token(T_DATE);
      break;
      }
    case T_DATETIME:{
      jj_consume_token(T_DATETIME);
      break;
      }
    case ID:{
      jj_consume_token(ID);
      break;
      }
    default:
      jj_la1[14] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void L_COMPLEMENTO() throws ParseException {
    COMPLEMENTO();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case T_NULO:
    case T_NO_NULO:
    case T_AUTOINCREMETABLE:
    case T_LLAVE_PRIMARIA:
    case T_LLAVE_FORANEA:{
      L_COMPLEMENTO();
      break;
      }
    default:
      jj_la1[15] = jj_gen;
      ;
    }
  }

  final public void COMPLEMENTO() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case T_NULO:{
      jj_consume_token(T_NULO);
      break;
      }
    case T_NO_NULO:{
      jj_consume_token(T_NO_NULO);
      break;
      }
    case T_AUTOINCREMETABLE:{
      jj_consume_token(T_AUTOINCREMETABLE);
      break;
      }
    case T_LLAVE_PRIMARIA:{
      jj_consume_token(T_LLAVE_PRIMARIA);
      break;
      }
    case T_LLAVE_FORANEA:{
      jj_consume_token(T_LLAVE_FORANEA);
      jj_consume_token(ID);
      break;
      }
    default:
      jj_la1[16] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void CREATE_OBJETO() throws ParseException {
    jj_consume_token(T_OBJETO);
    jj_consume_token(ID);
    jj_consume_token(PAR_IZQ);
    L_ATRIBUTO();
    jj_consume_token(PAR_DER);
  }

  final public void L_ATRIBUTO() throws ParseException {
    ATRIBUTO();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case COMA:{
      jj_consume_token(COMA);
      L_ATRIBUTO();
      break;
      }
    default:
      jj_la1[17] = jj_gen;
      ;
    }
  }

  final public void ATRIBUTO() throws ParseException {
    TIPO_DATO_ATRIBUTO();
    jj_consume_token(ID);
  }

  final public void TIPO_DATO_ATRIBUTO() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case T_TEXT:{
      jj_consume_token(T_TEXT);
      break;
      }
    case T_INTEGER:{
      jj_consume_token(T_INTEGER);
      break;
      }
    case T_DOUBLE:{
      jj_consume_token(T_DOUBLE);
      break;
      }
    case T_BOOL:{
      jj_consume_token(T_BOOL);
      break;
      }
    case T_DATE:{
      jj_consume_token(T_DATE);
      break;
      }
    case T_DATETIME:{
      jj_consume_token(T_DATETIME);
      break;
      }
    default:
      jj_la1[18] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void CREATE_PROCEDIMIENTO() throws ParseException {
    jj_consume_token(T_PROCEDIMIENTO);
    jj_consume_token(ID);
    jj_consume_token(PAR_IZQ);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case T_TEXT:
    case T_INTEGER:
    case T_DOUBLE:
    case T_BOOL:
    case T_DATE:
    case T_DATETIME:
    case ID:{
      L_PARAMETRO();
      break;
      }
    default:
      jj_la1[19] = jj_gen;
      ;
    }
    jj_consume_token(PAR_DER);
    jj_consume_token(LLAVE_IZQ);
    L_SENTENCIAS();
    jj_consume_token(LLAVE_DER);
  }

  final public void L_PARAMETRO() throws ParseException {
    PARAMETRO();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case COMA:{
      jj_consume_token(COMA);
      L_PARAMETRO();
      break;
      }
    default:
      jj_la1[20] = jj_gen;
      ;
    }
  }

  final public void PARAMETRO() throws ParseException {
    TIPO_DATO();
    jj_consume_token(ARROBA);
  }

  final public void CREATE_FUNCION() throws ParseException {
    jj_consume_token(T_FUNCION);
    jj_consume_token(ID);
    jj_consume_token(PAR_IZQ);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case T_TEXT:
    case T_INTEGER:
    case T_DOUBLE:
    case T_BOOL:
    case T_DATE:
    case T_DATETIME:
    case ID:{
      L_PARAMETRO();
      break;
      }
    default:
      jj_la1[21] = jj_gen;
      ;
    }
    jj_consume_token(PAR_DER);
    TIPO_DATO();
    jj_consume_token(LLAVE_IZQ);
    L_SENTENCIAS();
    jj_consume_token(LLAVE_DER);
  }

  final public void CREATE_USUARIO() throws ParseException {
    jj_consume_token(T_USUARIO);
    jj_consume_token(ID);
    jj_consume_token(T_COLOCAR);
    jj_consume_token(T_PASSWORD);
    jj_consume_token(IGUAL);
    jj_consume_token(CADENA);
  }

  final public void RETORNO() throws ParseException {
    jj_consume_token(T_RETORNO);
    LOGICA_OR();
  }
